# summit_xl_webots

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  mainpage.dox  package.xml
control/: robot.yaml  robot_control.yaml
launch/: summit_xl_one_robot.launch  summit_xl_webots.launch  webots_base.launch  webots_rviz.launch  webots_rviz_one.launch
protos/: .SummitXl.cache  SummitXl.proto  SummitXl_base.proto  SummitXl_robot.proto  summitXl.wbo
rviz/: base.rivz.rviz  default.rviz  summitxl_a.rviz
worlds/: .empty_world.wbproj  .sample_world.wbproj  granja.wbt  n_robots_world.wbt  one_robot_world.wbt  sample_world.wbt
